@@ -1,5 +1,7 @@
 
 5.76  2015-02-02
+  - Emergency release for a critical security issue that can expose files on
+    Windows systems, everybody should update!
   - Increased default max_message_size from 10MB to 16MB in Mojo::Message.
   - Reduced default max_line_size from 10KB to 8KB in Mojo::Headers and
     Mojo::Message.
